--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -81,7 +81,7 @@ top:27%;
   top:28%;
   font-size:18vw;
   text-align: center;
-  left:8%;
+  left:7%;
 }
 .home-img1{
   width: 120px;
